404, restricted page UI done, tags overflow, create post modal responsive, invite to community/hobbycue error bug, 06E005 - page and profile responsive - kept hobby dropdown opend

--- a/src/components/_modals/EditListing/ListingTag/styles.module.css
+++ b/src/components/_modals/EditListing/ListingTag/styles.module.css
@@ -19,8 +19,9 @@
   flex-wrap: wrap;
   row-gap: 12px;
   column-gap: 12px;
-  height: 42px;
-  overflow-y: auto;
+  margin-top: 16px;
+  /* height: 42px;
+  overflow-y: auto; */
 }
 .selected-value {
   display: flex;
@@ -51,7 +52,7 @@
 @media screen and (min-width: 1100px) {
   .modal-wrapper {
     max-height: calc(100vh - 6rem);
-    height: 100%;
+    height: calc(100vh - 6rem);
   }
   .modal-wrapper .body {
     height: 100%;
